YamlFiles/emplapi-depl-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emplapi-depl
  labels:
    app: employeeapi
spec:
  replicas: 4
  selector:
    matchLabels:
      app: employeeapi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: employeeapi
    spec:
      containers:
        - name: employeeapi
          image: atharimam/employeeapi:45887
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
