YamlFiles/emplapi-depl-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emplapi-depl
  labels:
    app: employeeapi
spec:
  replicas: 4
  selector:
    matchLabels:
      app: employeeapi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: employeeapi
    spec:
      containers:
        - name: employeeapi
          image: atharimam/employeeapi.api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
---

apiVersion: v1
kind: Service
metadata:
  name: emplapi-svc
spec:
  selector:
    app: employeeapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
