YamlFiles/empldb-ssets-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: empldb-svc
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - port: 3306
      name: mysql
      targetPort: 3306

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: empldb-ssets
spec:
  serviceName: empldb-svc
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
              readOnly: false
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: empldb-pvc
