YamlFiles/emplapi-depl-ing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emplapi-depl
  labels:
    app: employeeapi
spec:
  replicas: 4
  selector:
    matchLabels:
      app: employeeapi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: employeeapi
    spec:
      containers:
        - name: employeeapi
          image: atharimam/employeeapi:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
---

apiVersion: v1
kind: Service
metadata:
  name: emplapi-svc
spec:
  selector:
    app: employeeapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emplapi-ing
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  ingressClassName: gce
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: emplapi-svc
                port:
                  number: 80
