YamlFiles/emplapi-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emplapi-ing
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  ingressClassName: gce
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: emplapi-svc
                port:
                  number: 80
